Add steps to make samosa in samosa.html

--- a/recipes/samsosa.html
+++ b/recipes/samsosa.html
@@ -29,5 +29,33 @@
         <li>Red chili powder to taste</li>
         <li>1/2 tsp. Dry Mango powder( Amchur) (optional)</li>
     </ul>
+    <h4>Steps:</h4>
+    <ol>
+        <li><b>For Cover</b>
+            <ol>
+                <li>Mix all the ingredients (salt, oil, ajwain) except water.</li>
+                <li>Add a little water at a time.</li>
+                <li>Pat and knead well for several times into a soft pliable dough.</li>
+                <li>Cover it with moist Muslin cloth and keep aside for 15 minutes.</li>
+            </ol>
+        </li>
+        <li><b>For Stuffing</b>
+            <ol>
+                <li>In a bowl add mashed potatoes and all dry masalas (salt, chili powder, mango powder, garam masala) and green chilles, ginger and Mix well.</li>
+                <li>Add green peas, cashews and raisins and mix well.</li>
+                <li>Add coriander and keep aside.</li>
+            </ol>
+        </li>
+        <li><b>To make Samosas</b>
+            <ol>
+                <li>Make small rolls of dough and roll it into a 4″ diameter circle.</li>
+                <li>Cut it into two parts like semi-circle.</li>
+                <li>Now take one semi circle and fold it like a cone. Use water while doing so.</li>
+                <li>Place a spoon of filling in the cone and seal the third side using a drop of water.</li>
+                <li>Heat oil in a kadhai and deep fry till golden brown (fry on a medium flame).</li>
+                <li>Serve samosa hot with hari chutney, tamarind chutney.</li>
+            </ol>
+        </li>
+    </ol>
 </body>
 </html>
