--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/samsosa.html">Samosa</a>
+    <ul>
+        <li><a href="./recipes/samsosa.html">Samosa</a></li>
+        <li><a href="./recipes/aloo ki sabji.html">Aloo baingan ki sabji</a></li>
+    </ul>
 </body>
 </html>
