Edit path of the links inside body of the recipes pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/samsosa.html">Samosa</a></li>
-        <li><a href="./recipes/aloo ki sabji.html">Aloo baingan ki sabji</a></li>
+        <li><a href="recipes/samsosa.html">Samosa</a></li>
+        <li><a href="recipes/aloo ki sabji.html">Aloo baingan ki sabji</a></li>
     </ul>
 </body>
 </html>
